Updated variable names

--- a/CI2.ipynb
+++ b/CI2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:72acf7b79feb0c226592ece42eb38b7adb45fb6f0382f7bbea2ba62e131a946e"
+  "signature": "sha256:4f2e4364d23bfd62efda5c9a7722c8c577eb16c0d49229f7cfa4e2331bba9435"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -96,7 +96,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -112,7 +112,7 @@
       "import pydelicious\n",
       "pydelicious.get_popular(tag='programming')\n",
       "dataset = {}\n",
-      "dataset[\"ass\"] = pydelicious.get_popular(tag='school')\n",
+      "dataset[\"school\"] = pydelicious.get_popular(tag='school')\n",
       "dataset[\"YouTube\"] = pydelicious.get_popular(tag='YouTube')\n",
       "dataset[\"college\"] = pydelicious.get_popular(tag='college')\n",
       "list_of_items = []\n",
@@ -128,22 +128,22 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[u'http://vm-education.com/', u'http://kotaku.com/turning-school-into-an-rpg-where-you-level-up-by-studyi-1585846201?utm_campaign=Socialflow_Kotaku_Facebook&utm_source=Kotaku_Facebook&utm_medium=Socialflow', u'http://cwx.prenhall.com/bookbind/pubbooks/martini10/', u'http://truepredictions.com/?post_type=post&p=122267', u'http://www.pedigree-chart.com/?post_type=post&p=1908', u'http://www.doverbroecks.com/', u'http://www.headington.org/', u'http://www.mcsoxford.org/', u'http://www.newcollegeschool.org/', u'http://www.ryestantony.co.uk/', u'http://a.bouque.eurotech.free.fr/dp3_prof/index.html', u'http://www.futura-sciences.com/magazines/matiere/infos/actu/d/physique-dossier-tout-savoir-energie-53790/', u'http://eduscol.education.fr/cid76611/se-former-au-c2i-grace-a-fun.html', u'http://www.artvideo.free.fr/accueil.html', u'http://www.digitalmcd.com/', u'http://www.stadtpanoramen.de/', u'https://www.ecollegefinder.org/most-selective-colleges-map.aspx', u'http://www.collegeaftermath.com/life-adventures-after-college/top-ten-most-common-mistakes-a-new-grad-can-make/', u'http://www.whitehouse.gov/sites/default/files/college_completion_tool_kit.pdf', u'http://www.hercampus.com/school/uc-riverside/art-hugging', u'https://www.youtube.com/watch?v=BZgg4tocIvY&index=15&list=PL1FBCE1328D4F1D32', u'http://www.youtube.com/watch?v=d1x7phKuaUk&list=RDd1x7phKuaUk#t=232', u'http://www.youtube.com/user/globaltrancemission', u'http://www.youtube.com/watch?v=WKPRyKYdBYA', u'http://www.ad-exchange.fr/quelles-sont-les-differentes-options-de-ciblage-publicitaire-sur-les-differents-sociaux-12256/', u'http://www.mediamister.com/blog/how-to-block-the-videobanner-advertisements-in-youtube/', u'http://www.mediamister.com/blog/useful-shortcut-keys-for-youtube/', u'http://www.ytpak.com/?component=video&task=view&id=lEZpLypyC_c', u'http://www.softpedia.com/get/Internet/Download-Managers/MassTube.shtml', u'https://www.youtube.com/watch?v=4Ma3wcaYV8k']\n"
+        "[u'http://a.bouque.eurotech.free.fr/dp3_prof/index.html', u'http://www.futura-sciences.com/magazines/matiere/infos/actu/d/physique-dossier-tout-savoir-energie-53790/', u'http://eduscol.education.fr/cid76611/se-former-au-c2i-grace-a-fun.html', u'http://www.artvideo.free.fr/accueil.html', u'http://www.digitalmcd.com/', u'http://www.stadtpanoramen.de/', u'https://www.ecollegefinder.org/most-selective-colleges-map.aspx', u'http://www.collegeaftermath.com/life-adventures-after-college/top-ten-most-common-mistakes-a-new-grad-can-make/', u'http://www.whitehouse.gov/sites/default/files/college_completion_tool_kit.pdf', u'http://www.hercampus.com/school/uc-riverside/art-hugging', u'http://vm-education.com/', u'http://kotaku.com/turning-school-into-an-rpg-where-you-level-up-by-studyi-1585846201?utm_campaign=Socialflow_Kotaku_Facebook&utm_source=Kotaku_Facebook&utm_medium=Socialflow', u'http://cwx.prenhall.com/bookbind/pubbooks/martini10/', u'http://truepredictions.com/?post_type=post&p=122267', u'http://www.pedigree-chart.com/?post_type=post&p=1908', u'http://www.doverbroecks.com/', u'http://www.headington.org/', u'http://www.mcsoxford.org/', u'http://www.newcollegeschool.org/', u'http://www.ryestantony.co.uk/', u'https://www.youtube.com/watch?v=BZgg4tocIvY&index=15&list=PL1FBCE1328D4F1D32', u'http://www.youtube.com/watch?v=d1x7phKuaUk&list=RDd1x7phKuaUk#t=232', u'http://www.youtube.com/user/globaltrancemission', u'http://www.youtube.com/watch?v=WKPRyKYdBYA', u'http://www.ad-exchange.fr/quelles-sont-les-differentes-options-de-ciblage-publicitaire-sur-les-differents-sociaux-12256/', u'http://www.mediamister.com/blog/how-to-block-the-videobanner-advertisements-in-youtube/', u'http://www.mediamister.com/blog/useful-shortcut-keys-for-youtube/', u'http://www.ytpak.com/?component=video&task=view&id=lEZpLypyC_c', u'http://www.softpedia.com/get/Internet/Download-Managers/MassTube.shtml', u'https://www.youtube.com/watch?v=4Ma3wcaYV8k']\n"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "list_ass = []\n",
+      "list_school = []\n",
       "for i in list_of_items:\n",
-      "    if i in dataset[\"ass\"]:\n",
-      "        list_ass.append(1)\n",
+      "    if i in dataset[\"school\"]:\n",
+      "        list_school.append(1)\n",
       "    else:\n",
-      "        list_ass.append(0)\n",
+      "        list_school.append(0)\n",
       "list_YouTube = []\n",
       "for i in list_of_items:\n",
       "    if i in dataset[\"YouTube\"]:\n",
@@ -158,7 +158,7 @@
       "        list_college.append(0)\n",
       "        \n",
       "        \n",
-      "print list_ass\n",
+      "print list_school\n",
       "print list_college"
      ],
      "language": "python",
@@ -168,12 +168,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
