Updated dataset creation to check only URL's

--- a/CI2.ipynb
+++ b/CI2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4f2e4364d23bfd62efda5c9a7722c8c577eb16c0d49229f7cfa4e2331bba9435"
+  "signature": "sha256:2debf96015b165ac756d818e6165dce22e6342d54dcfc6e58943d5bfa4f9a2cf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -139,26 +139,26 @@
      "collapsed": false,
      "input": [
       "list_school = []\n",
-      "for i in list_of_items:\n",
-      "    if i in dataset[\"school\"]:\n",
-      "        list_school.append(1)\n",
-      "    else:\n",
-      "        list_school.append(0)\n",
       "list_YouTube = []\n",
-      "for i in list_of_items:\n",
-      "    if i in dataset[\"YouTube\"]:\n",
-      "        list_YouTube.append(1)\n",
-      "    else:\n",
-      "        list_YouTube.append(0)\n",
       "list_college = []\n",
       "for i in list_of_items:\n",
-      "    if i in dataset[\"college\"]:\n",
-      "        list_college.append(1)\n",
-      "    else:\n",
-      "        list_college.append(0)\n",
-      "        \n",
+      "    found = False\n",
+      "    for item in dataset['school']:\n",
+      "        if i == item['url']:\n",
+      "            found = True\n",
+      "    list_school.append(1 if found else 0)\n",
+      "    found = False\n",
+      "    for item in dataset['YouTube']:\n",
+      "        if i == item['url']:\n",
+      "            found = True\n",
+      "    list_YouTube.append(1 if found else 0)\n",
+      "    for item in dataset['college']:\n",
+      "        if i == item['url']:\n",
+      "            found = True\n",
+      "    list_college.append(1 if found else 0)\n",
       "        \n",
       "print list_school\n",
+      "print list_YouTube\n",
       "print list_college"
      ],
      "language": "python",
@@ -168,12 +168,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
