Removed unused cells

--- a/CI2.ipynb
+++ b/CI2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2debf96015b165ac756d818e6165dce22e6342d54dcfc6e58943d5bfa4f9a2cf"
+  "signature": "sha256:38ba04aed5f6e231aec6477b73ccddd4611a31c7031c43a3fe41b9531baae885"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,48 +15,6 @@
      "source": [
       "CI 2"
      ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
-      "How to import a file from another directory."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import '../Programming/CIChap2/test'"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-1-406da43dce88>, line 1)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-406da43dce88>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import '../Programming/CIChap2/test'\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import sys\n",
-      "sys.path.insert(0, '../Programming/CIChap2')\n",
-      "\n",
-      "import test"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -152,6 +110,7 @@
       "        if i == item['url']:\n",
       "            found = True\n",
       "    list_YouTube.append(1 if found else 0)\n",
+      "    found = False\n",
       "    for item in dataset['college']:\n",
       "        if i == item['url']:\n",
       "            found = True\n",
@@ -169,11 +128,12 @@
        "stream": "stdout",
        "text": [
         "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-        "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+        "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
