Reworded first answer

--- a/CI2.ipynb
+++ b/CI2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:38ba04aed5f6e231aec6477b73ccddd4611a31c7031c43a3fe41b9531baae885"
+  "signature": "sha256:c4e82774f6a125834e94719381b63a4b33caf567babe7ee2d000d6b98933df16"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The Pearson correlation works well for the blog dataset where the values are actual word counts. However, this dataset just has 1s and 0s for presence or absence, and it would be more useful to define some measure of overlap between the people who want two items. For this, there is a measure called the Tanimoto coefficient, which is the ratio of the intersection set (only the items that are in both sets) to the union set (all the items in either set). "
+      "The Pearson correlation works well for datasets where the values are actual word counts. However, for a dataset with just 1s and 0s for presence or absence, it would be more useful to define some measure of overlap between the items. For this, we can use the Tanimoto coefficient, which is the ratio of the intersection set (only the items that are in both sets) to the union set (all the items in either set). "
      ]
     },
     {
