added fields to data class

--- a/Student-Course Recommender.ipynb
+++ b/Student-Course Recommender.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:57305b73d17bf0f858a613467bc8f3e24ea49913253eede9ca0b94eb78b49a9d"
+  "signature": "sha256:17a2002d7d3164824b5c4dccd25e5e9364e03bd45e82218523b66ab6c2d20b40"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -61,7 +61,18 @@
       "    \"\"\"\n",
       "    \n",
       "    def __init__(self):\n",
-      "        self.name = \"\""
+      "        self.name = \"\"\n",
+      "        self.period = \"\"\n",
+      "        self.activitynr = 0\n",
+      "        self.partialnr = 0\n",
+      "        self.semester = 0\n",
+      "        self.status = \"\"\n",
+      "        self.faculty = \"\"\n",
+      "        self.courseid = \"\"\n",
+      "        self.coursetitle = \"\"\n",
+      "        self.lettergrade = \"\"\n",
+      "        self.grade = None\n",
+      "        self.subplan = \"\""
      ],
      "language": "python",
      "metadata": {},
