many changes to the recommender

--- a/Student-Course Recommender.ipynb
+++ b/Student-Course Recommender.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:17a2002d7d3164824b5c4dccd25e5e9364e03bd45e82218523b66ab6c2d20b40"
+  "signature": "sha256:f3b105285ea6df001429c2281249482e0225fb603d9fade19584101ab90b3beb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,11 +60,106 @@
       "    \"\"\" One data entry for the AUC Course Recommender.\n",
       "    \"\"\"\n",
       "    \n",
-      "    def __init__(self):\n",
-      "        self.name = \"\"\n",
+      "    def __init__(self, name = \"\", period = \"\", activity = 0, partial = 0, semester = 0,\n",
+      "                 status = \"\", faculty = \"\", courseid = \"\", coursetitle = \"\",\n",
+      "                 lettergrade = \"\", grade = None, subplan = \"\"):\n",
+      "        self.name = name\n",
+      "        self.period = period\n",
+      "        self.activity = activity\n",
+      "        self.partial = partial\n",
+      "        self.semester = semester\n",
+      "        self.status = status\n",
+      "        self.faculty = faculty\n",
+      "        self.courseid = courseid\n",
+      "        self.coursetitle = coursetitle\n",
+      "        self.lettergrade = lettergrade\n",
+      "        self.grade = grade\n",
+      "        self.subplan = subplan\n",
+      "        # self.__check_integrity()\n",
+      "    \n",
+      "    def get_name(self):\n",
+      "        return self.name\n",
+      "    \n",
+      "    def set_name(self, name):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_period(self):\n",
+      "        return self.period\n",
+      "    \n",
+      "    def __set_period(self, period):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_activity(self):\n",
+      "        return self.activity\n",
+      "    \n",
+      "    def __set_activity(self, activity):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_partial(self):\n",
+      "        return self.partial\n",
+      "    \n",
+      "    def __set_partial(self, partial):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_semester(self):\n",
+      "        return self.semester\n",
+      "    \n",
+      "    def __set_semester(self, semester):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_status(self):\n",
+      "        return self.status\n",
+      "    \n",
+      "    def __set_status(self, status):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_faculty(self):\n",
+      "        return self.faculty\n",
+      "    \n",
+      "    def __set_faculty(self, faculty):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_courseid(self):\n",
+      "        return self.courseid\n",
+      "    \n",
+      "    def __set_courseid(self, courseid):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_coursetitle(self):\n",
+      "        return self.coursetitle\n",
+      "    \n",
+      "    def __set_coursetitle(self, coursetitle):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_lettergrade(self):\n",
+      "        return self.lettergrade\n",
+      "    \n",
+      "    def __set_lettergrade(self, lettergrade):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_grade(self):\n",
+      "        return self.grade\n",
+      "    \n",
+      "    def __set_grade(self, grade):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def get_subplan(self):\n",
+      "        return self.subplan\n",
+      "    \n",
+      "    def __set_subplan(self, subplan):\n",
+      "        self.name = name\n",
+      "    \n",
+      "    def __check_integrity(self):\n",
+      "        \"\"\" Verify the integrity of the data by checking the type of every data entry.\n",
+      "        \"\"\"\n",
+      "        \n",
+      "        test = []\n",
+      "        \n",
+      "        if not (type(self.name) is str and len(self.name) > 0):\n",
+      "            test.append(\"name\")\n",
       "        self.period = \"\"\n",
-      "        self.activitynr = 0\n",
-      "        self.partialnr = 0\n",
+      "        self.activity = 0\n",
+      "        self.partial = 0\n",
       "        self.semester = 0\n",
       "        self.status = \"\"\n",
       "        self.faculty = \"\"\n",
@@ -72,11 +167,13 @@
       "        self.coursetitle = \"\"\n",
       "        self.lettergrade = \"\"\n",
       "        self.grade = None\n",
-      "        self.subplan = \"\""
+      "        self.subplan = \"\"\n",
+      "        # TODO: implement rest------------------------------------------------------------------------------"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -86,19 +183,21 @@
       "    \"\"\" AUC Course Recommender.\n",
       "    \"\"\"\n",
       "    \n",
-      "    def __init__(self, filepath = None):\n",
+      "    def __init__(self, filepath = None, anonymize = False):\n",
       "        self.data = []\n",
       "        self.datacleaned = False\n",
       "        \n",
       "        if filepath is not None:\n",
-      "            self.import_data(filepath)\n",
+      "            self.import_data(filepath, anonymize)\n",
       "\n",
       "    def import_data(self, filepath, anonymize = True):\n",
       "        \"\"\" Import data into the recommender. Supports Excel and  CSV files.\n",
       "        \"\"\"\n",
       "        if filepath.endswith(\".csv\"):\n",
+      "            print \"Starting CSV import...\"\n",
       "            self.__import_csv(filepath)\n",
       "        elif filepath.endswith(\".xls\") or filepath.endswith(\".xlsx\"):\n",
+      "            print \"Starting Excel import...\"\n",
       "            self.__import_excel(filepath)\n",
       "        else:\n",
       "            # TODO: implement error messages for unsupported filetype and improper argument------------------\n",
@@ -124,13 +223,24 @@
       "        workbook = xlrd.open_workbook(filepath)\n",
       "        worksheet = workbook.sheet_by_index(0)\n",
       "        \n",
-      "        # TODO: finish---------------------------------------------------------------------------------------\n",
+      "        assert worksheet.ncols == 11\n",
+      "        \n",
+      "        for row in xrange(1, worksheet.nrows):\n",
+      "            e = []\n",
+      "            for col in xrange(11):\n",
+      "                e.append(worksheet.cell_value(row, col))\n",
+      "            self.data.append(RecommenderData(e[0], e[1], e[2], e[3], e[4], e[5],\n",
+      "                                             e[6], e[7], e[8], e[9], subplan = e[10]))\n",
+      "        \n",
+      "        print \"Successfully imported\", str(worksheet.nrows), \"rows.\"\n",
       "    \n",
       "    def anonymize_data(self, seed = \"+16\"):\n",
       "        \"\"\" Anonymize the imported data. Use seed to enable lookup of names.\n",
       "            Seed can be an alphanumeric string that initializes a specific hashing order or\n",
       "            an integer specifying the length of a new random seed preceded by '+'.\n",
       "        \"\"\"\n",
+      "        print \"Starting the anonymization...\"\n",
+      "        \n",
       "        import random\n",
       "        \n",
       "        if seed.startswith(\"+\"): # if no seed is supplied, create and save one for future use\n",
@@ -142,22 +252,23 @@
       "                length = int(length)\n",
       "            seed = self.__get_seed(length)\n",
       "            with open('random_seed', 'a') as out: # write the generated seed to a file\n",
-      "                out.write(seed, '\\n')\n",
+      "                out.write(seed + '\\n')\n",
       "\n",
-      "        rand = random.SystemRandom(seed)\n",
-      "        self.__shuffle(rand)\n",
+      "        self.__shuffle(seed)\n",
       "        \n",
-      "        print \"Data successfully anonymized\"\n",
+      "        print \"Data successfully anonymized.\"\n",
       "        \n",
       "    \n",
-      "    def __get_seed(self, length = 16):\n",
+      "    def __get_seed(self, length):\n",
       "        \"\"\" Generate a random alphanumeric seed of the given length.\n",
       "        \"\"\"\n",
       "        import random\n",
+      "        import string\n",
       "        \n",
       "        rand = random.SystemRandom()\n",
       "        chars = string.letters + string.digits\n",
-      "        return ''.join(rand.choice(chars) for _ in xrange(length))\n",
+      "        key = ''.join(rand.choice(chars) for _ in xrange(length))\n",
+      "        return key\n",
       "    \n",
       "    def __shuffle(self, key):\n",
       "        \"\"\" Does the actual data anoymization based on a given key.\n",
@@ -169,63 +280,87 @@
       "            hashed_name = hashlib.md5(name.encode()).hexdigest()\n",
       "            base = hashed_name + key\n",
       "            hashed_base = hashlib.sha1(base.encode()).hexdigest()\n",
-      "            entry.__set_name(hashed_base)"
+      "            entry.set_name(hashed_base)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-11-9f6642b8237d>, line 5)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-9f6642b8237d>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    def __init__(self, [filepath]):\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": [],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import xlrd\n",
-      "workbook = xlrd.open_workbook('grades.xlsx')\n",
-      "worksheet = workbook.sheet_by_index(1)\n",
-      "\n",
-      "num_rows = worksheet.nrows - 1\n",
-      "num_cells = worksheet.ncols - 1\n",
-      "\n",
-      "curr_row = - 1\n",
-      "\n",
-      "while curr_row < num_rows:\n",
-      "    curr_row += 1\n",
-      "    row = worksheet.row(curr_row)\n",
-      "    print 'Row:', curr_row\n",
-      "    curr_cell = -1\n",
-      "    while curr_cell < num_cells:\n",
-      "        curr_cell += 1\n",
-      "        #cell types: 0=empty, 1=text, 2=number, 3=data, 4=boolean, 5=error, 6=blank\n",
-      "        cell_type = worksheet.cell_type(curr_row, curr_cell)\n",
-      "        cell_value = worksheet.cell_value(curr_row, curr_cell)\n",
-      "        print ' ', cell_type, ':', cell_value"
+      "new = Recommender('grades.xlsx')\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: 'gr.xls'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-2-757241a79744>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mxlrd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mworkbook\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxlrd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_workbook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gr.xls'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mworksheet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mworkbook\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_by_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sheet1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnum_rows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mworksheet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnrows\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Library/MyApps/anaconda/lib/python2.7/site-packages/xlrd/__init__.pyc\u001b[0m in \u001b[0;36mopen_workbook\u001b[0;34m(filename, logfile, verbosity, use_mmap, file_contents, encoding_override, formatting_info, on_demand, ragged_rows)\u001b[0m\n\u001b[1;32m    392\u001b[0m         \u001b[0mpeek\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile_contents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mpeeksz\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    393\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 394\u001b[0;31m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    395\u001b[0m         \u001b[0mpeek\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpeeksz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    396\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'gr.xls'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Starting Excel import...\n",
+        "Successfully imported 8 rows.\n",
+        "Data successfully imported\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "new.anonymize_data()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Starting the anonymization...\n",
+        "Data successfully anonymized.\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print new.data[0].get_name()\n",
+      "print new.data[6].get_name()\n",
+      "print new.data[0].get_grade()\n",
+      "print new.data[6].get_courseid()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "921031f952f5ca2d086a04a9010132315162a31c\n",
+        "4052aebf2740811d9e7941576a5bafd2a3e15aca\n",
+        "None\n",
+        "900111ACCH\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
     }
    ],
    "metadata": {}
